Filter was added

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -19,15 +19,18 @@
     </div>
   </form>
 
-  <div class="heroes-list">
-    <div class="hero-item" *ngFor="let hero of heroes">
-      <div class="hero-item__photo"><img src="/mishok.jpg" alt=""></div>
-      <div class="hero-item__title">{{hero.name}}</div>
-      <ul class="hero-description" >
-        <li class="hero-description__item">{{hero.height}}</li>
-        <li class="hero-description__item">{{hero.mass}}</li>
-        <li class="hero-description__item">{{hero.hair_color}}</li>
-      </ul>
+  <div class="heroes-block">
+    <div class="heroes-block__empty" *ngIf="heroesFiltered.length === 0">Sorry Babushka</div>
+    <div class="heroes-list">
+      <div class="hero-item" *ngFor="let hero of heroesFiltered">
+        <div class="hero-item__photo"><img src="/mishok.jpg" alt=""></div>
+        <div class="hero-item__title">{{hero.name}}</div>
+        <ul class="hero-description" >
+          <li class="hero-description__item">{{hero.height}}</li>
+          <li class="hero-description__item">{{hero.mass}}</li>
+          <li class="hero-description__item">{{hero.hair_color}}</li>
+        </ul>
+      </div>
     </div>
   </div>
 
