Design for app was created

--- a/src/app/main-content/filter/filter.component.html
+++ b/src/app/main-content/filter/filter.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="filtersForm">
-  <input type="text" class="search" formControlName="search">
+  <input type="text" class="search" placeholder="Enter hero name" formControlName="search">
 
   <div class="hero-switcher">
     <div class="hero-switcher__item">
