--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="main-container">
     <app-sidebar></app-sidebar>
-    <app-header></app-header>
-    <app-main-content></app-main-content>
+    <div class="content-area">
+        <app-header></app-header>
+        <app-main-content></app-main-content>
+    </div>
 </div>
