--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,6 @@
+<div class="header-overlay"></div>
 <div class="header">
-  <h2 class="header__title">Header</h2>
+  <div class="main-container">
+    <h2 class="header__title">Star Wars <span class="header__title_light">encyclopedia</span></h2>
+  </div>
 </div>
