--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,11 +1,15 @@
-<div class="sidebar">
-  <h2 class="sidebar__title">Navigation</h2>
-
-  <ul class="sidebar-list">
-    <li class="sidebar-list__item">Item 1</li>
-    <li class="sidebar-list__item">Item 1</li>
-    <li class="sidebar-list__item">Item 1</li>
-    <li class="sidebar-list__item">Item 1</li>
-    <li class="sidebar-list__item">Item 1</li>
-  </ul>
+<div class="sidebar-block">
+  <div class="main-container">
+    <div class="sidebar">
+      <h2 class="sidebar__title"><img class="sidebar__icon" src="/assets/imgs/death-star-icon.png" alt=""> Navigation</h2>
+        <ul class="sidebar-list">
+          <li class="sidebar-list__item"><a href="#">Item 1</a></li>
+          <li class="sidebar-list__item"><a href="#">Item 2</a></li>
+          <li class="sidebar-list__item"><a href="#">Item 3</a></li>
+          <li class="sidebar-list__item"><a href="#">Item 4</a></li>
+          <li class="sidebar-list__item"><a href="#">Item 5</a></li>
+          <li class="sidebar-list__item"><a href="#">Item 6</a></li>
+        </ul>
+      </div>
+  </div>
 </div>
