style files were updated

--- a/src/app/main-content/filter/filter.component.sass
+++ b/src/app/main-content/filter/filter.component.sass
@@ -23,7 +23,7 @@ $blue: #111622
   display: flex
   align-items: flex-start
   justify-content: flex-start
-  .hero-switcher__item
+  &__item
     margin-left: 25px
     &:first-child
       margin-left: 0
