--- a/src/app/main-content/hero-list/hero-list.component.sass
+++ b/src/app/main-content/hero-list/hero-list.component.sass
@@ -15,17 +15,17 @@ $blue: #111622
   background: #fff
   &:nth-child(3n)
     margin-right: 0
-  .hero-item__title
+  &__title
     margin: 0
     padding: 20px 0 10px 0
     text-align: center
     font-size: 20px
     font-weight: 600
-  .hero-item__photo_light
+  &__photo_light
     background: #dcd7d7
-  .hero-item__photo_dark
+  &__photo_dark
     background: $blue
-  .hero-item__photo
+  &__photo
     position: relative
     height: 280px
     width: 100%
@@ -34,7 +34,7 @@ $blue: #111622
     justify-content: center
     img
       width: 120px
-  .hero-item__photo-title
+  &__photo-title
     font-family: 'Indie Flower', cursive
     text-transform: capitalize
     position: absolute
@@ -44,17 +44,17 @@ $blue: #111622
     transform: rotate(13deg)
     right: 6px
     margin: 0
-  .hero-item__photo-title_dark
+  &__photo-title_dark
     text-shadow: 1px 1px 3px red
     color: red
     opacity: .5
-  .hero-item__photo-title_light
+  &__photo-title_light
     text-shadow: 1px 1px 3px aliceblue
 
 .hero-description
   margin: 0
   padding: 0
-  .hero-description__item
+  &__item
     list-style-type: none
     padding: 5px 20px
     border-bottom: 1px solid #eee
@@ -62,7 +62,7 @@ $blue: #111622
 .heroes-empty
   text-align: center
   padding-top: 30px
-  .heroes-empty__msg
+  &__msg
     font-size: 18px
     text-align: center
     color: $blue
