--- a/src/app/main-content/hero-list/hero-list.component.sass
+++ b/src/app/main-content/hero-list/hero-list.component.sass
@@ -66,3 +66,11 @@ $blue: #111622
     font-size: 18px
     text-align: center
     color: $blue
+
+@media (max-width: 1200px)
+  .hero-item
+    margin-right: 30px
+    &:nth-child(3n)
+      margin-right: 30px
+    &:nth-child(2n)
+      margin-right: 0
