--- a/src/app/main-content/main-content.component.sass
+++ b/src/app/main-content/main-content.component.sass
@@ -16,3 +16,11 @@ $blue: #111622
   display: flex
   align-items: center
   justify-content: center
+
+@media (max-width: 1200px)
+  .main-content
+    padding-left: 100px
+
+@media (max-width: 990px)
+  .main-content
+    padding-left: 40px
