--- a/src/app/sidebar/sidebar.component.sass
+++ b/src/app/sidebar/sidebar.component.sass
@@ -33,10 +33,13 @@ $blue: #111622
   padding-top: 60px
   .sidebar-list__item
     padding-bottom: 5px
+    list-style-type: none
     a
       color: #000
       text-decoration: none
-      &:hover
-        //text-decoration: underline
 
 
+@media (max-width: 990px)
+  .sidebar
+    left: 0
+    padding-left: 20px
