--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower')
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600')
 
 *
   font-family: 'Open Sans'
